--- a/style.css
+++ b/style.css
@@ -4,16 +4,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* border: 1px solid; */
 }
 
 body {
-    text-align: center;
     font-family: "Poppins", sans-serif;
+    height: 100vh;
+    width: 100%;
 }
 
 
-header {
-    padding: 20px;
+.header-h1 {
+    text-align: center;
+    margin-top: 50px;
 }
 
 .img-index {
@@ -45,4 +48,52 @@ header {
     color: black;
     font-weight: 700;
     margin-bottom: 10px;
+    text-align: center;
+}
+
+.img-recipe {
+    width: 600px;
+    height: 400px;
+    border-radius: 10px;
+}
+
+.recipe-container {
+    display: flex;
+    justify-content: center;
+}
+
+.content-left,
+.content-right {
+    flex: 1;
+    padding: 20px;
+}
+
+.content-left h1 {
+    border-left: 5px solid red;
+    margin-bottom: 10px;
+    padding-left: 5px;
+}
+
+.content-left h2 {
+    font-size: 20px;
+}
+
+.content-left p,
+ol li {
+    text-align: justify;
+}
+
+.content-right h3 {
+    margin: 10px 2px;
+}
+
+.content-right .abtn-back {
+    margin-top: 10px;
+    text-decoration: none;
+    color: black;
+    border: 2px solid black;
+    font-weight: 700;
+    float: right;
+    padding: 5px 10px;
+    border-radius: 10px;
 }
