--- a/style.css
+++ b/style.css
@@ -11,13 +11,30 @@ body {
     font-family: "Poppins", sans-serif;
     height: 100vh;
     width: 100%;
+    background-color: #e9e9e9;
 }
 
-
-.header-h1 {
-    text-align: center;
-    margin-top: 50px;
+.main-container {
+    display: flex;
+    flex-direction: column;
 }
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    padding: 20px;
+}
+
+header h1 {
+    letter-spacing: 5px;
+}
+
+h1 span {
+    color: rgb(230, 37, 37);
+}
+
 
 .img-index {
     width: 300px;
@@ -41,6 +58,7 @@ body {
     /* border: 1px solid black; */
     border-radius: 10px;
     box-shadow: 0 10px 10px lightgray;
+    background-color: white;
 }
 
 .ul-index li a {
@@ -51,26 +69,43 @@ body {
     text-align: center;
 }
 
+ul li span {
+    font-weight: 700;
+}
+
 .img-recipe {
-    width: 600px;
+    display: flex;
+    width: 100%;
     height: 400px;
     border-radius: 10px;
+    margin: 10px 0;
+}
+
+.img-recipe img {
+    border-radius: 10px;
+    width: 100%;
 }
 
 .recipe-container {
     display: flex;
     justify-content: center;
+    padding: 10px;
 }
 
 .content-left,
 .content-right {
+    margin: 10px;
     flex: 1;
-    padding: 20px;
+    padding: 25px 30px;
+    background-color: white;
+    border-radius: 10px;
 }
 
+
+
 .content-left h1 {
-    border-left: 5px solid red;
-    margin-bottom: 10px;
+    border-left: 5px solid rgb(230, 37, 37);
+    margin: 30px 0 10px;
     padding-left: 5px;
 }
 
@@ -78,22 +113,28 @@ body {
     font-size: 20px;
 }
 
+.content-right ul li,
+.content-right ol li {
+    margin: 0px 20px 5px;
+}
+
+
+
 .content-left p,
 ol li {
     text-align: justify;
 }
 
 .content-right h3 {
-    margin: 10px 2px;
+    margin: 0 20px;
 }
 
-.content-right .abtn-back {
-    margin-top: 10px;
+.content-left .abtn-back {
     text-decoration: none;
-    color: black;
-    border: 2px solid black;
+    background-color: black;
+    color: white;
+    /* border: 2px solid black; */
     font-weight: 700;
-    float: right;
-    padding: 5px 10px;
+    padding: 7px 12px;
     border-radius: 10px;
 }
