--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
     align-items: center;
     background-color: white;
     padding: 20px;
+    flex-shrink: 0;
 }
 
 header h1 {
@@ -44,6 +45,7 @@ h1 span {
 }
 
 .ul-index {
+    flex: 1;
     display: flex;
     gap: 30px;
     align-items: center;
