--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,7 +1,11 @@
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 768px) and (max-width: 1026px) {
     .recipe-container {
         display: flex;
         flex-direction: column;
+    }
+
+    .main-container header {
+        text-align: center;
     }
 
     .main-container .ul-index {
@@ -9,4 +13,61 @@
         flex-direction: column;
         padding-bottom: 30px;
     }
+
+    .img-recipe {
+        height: 450px;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+    .recipe-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-container header {
+        text-align: center;
+    }
+
+    .main-container .ul-index {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 30px;
+    }
+
+    .img-recipe {
+        height: 300px;
+    }
+
+}
+
+@media screen and (max-width: 400px) {
+    .recipe-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main-container header {
+        text-align: center;
+    }
+
+    .main-container .ul-index {
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 30px;
+    }
+
+    .img-recipe {
+        height: 200px;
+    }
+
+    .content-right {
+        font-size: 15px;
+    }
+
+    .content-left h2 {
+        font-size: 20px;
+    }
+
 }
