--- a/style.css
+++ b/style.css
@@ -59,8 +59,14 @@ h1 span {
     list-style: none;
     /* border: 1px solid black; */
     border-radius: 10px;
-    box-shadow: 0 10px 10px lightgray;
+    box-shadow: 0 10px 10px rgba(128, 128, 128, 0.2);
     background-color: white;
+}
+
+.ul-index li:hover {
+    position: relative;
+    bottom: 5px;
+    transition: 0.3ms;
 }
 
 .ul-index li a {
@@ -71,6 +77,7 @@ h1 span {
     text-align: center;
 }
 
+/*  */
 ul li span {
     font-weight: 700;
 }
@@ -78,7 +85,7 @@ ul li span {
 .img-recipe {
     display: flex;
     width: 100%;
-    height: 400px;
+    height: min(50vh, 500px);
     border-radius: 10px;
     margin: 10px 0;
 }
@@ -92,6 +99,7 @@ ul li span {
     display: flex;
     justify-content: center;
     padding: 10px;
+    height: 100vh;
 }
 
 .content-left,
@@ -101,6 +109,7 @@ ul li span {
     padding: 25px 30px;
     background-color: white;
     border-radius: 10px;
+    box-shadow: 0px 10px 10px rgba(128, 128, 128, 0.2);
 }
 
 
@@ -120,7 +129,9 @@ ul li span {
     margin: 0px 20px 5px;
 }
 
-
+.content-right {
+    font-size: clamp(.8rem, .9vw, 1.2rem);
+}
 
 .content-left p,
 ol li {
@@ -128,7 +139,8 @@ ol li {
 }
 
 .content-right h3 {
-    margin: 0 20px;
+    margin: 0 20px 10px;
+    color: rgb(230, 37, 37);
 }
 
 .content-left .abtn-back {
